# electron-demo

./: .gitignore  .gitmodules  .npmrc  CMakeLists.txt  conanfile.py  conanprofile.ini  index.html  main.js  package.json  pnpm-lock.yaml
.vscode.template/: launch.json  tasks.json
cmake/: brabbit_cmake_utils.cmake
native/: addon.cc
native/atomform/: native_apis.cc  node_apis.hh
native/brabbit_native_apis/: CMakeLists.txt
native/brabbit_native_apis/brabbit/: gl_renderer.cc  gl_renderer.hh  native_apis.cc
native/glad/: CMakeLists.txt
native/glad/include/glad/: glad.h
native/glad/src/: glad.c
native/native_apis/brabbit/: native_apis.cc
native/node_bridge/brabbit/: native_apis.cc
scripts/: pack-installer-darwin.sh  pack-installer-debain.sh  pack-installer-windows.cmd
src/main/: context.js  index.js  native.js  node-apis.js
src/preload/: index.cjs  index.js  node-apis.cjs
src/renderer/: index.html  renderer.js
